assignment-2/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: imesh-gateway
  namespace: default
spec:
  gatewayClassName: eg
  listeners:
  - name: http
    protocol: HTTP
    hostname: "*.company.local"
    port: 80
    allowedRoutes:
      namespaces:
        from: All
