assignment-2/httpbin-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: httpbin-policy
  namespace: default

spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: httpbin-route

  timeout:
    http:
      requestTimeout: 2s

  retry:
    numRetries: 5
    perRetry:
      timeout: 250ms
      backOff:
        baseInterval: 100ms
        maxInterval: 10s
    retryOn:
      triggers:
        - connect-failure
        - retriable-status-codes
      httpStatusCodes:
        - 500

  rateLimit:
    local:
      rules:
        - limit:
            requests: 5
            unit: Minute
